feat: added three new sections without style

--- a/style.css
+++ b/style.css
@@ -71,3 +71,12 @@ body {
 .footer {
     border: 1px blanchedalmond solid;
 }
+
+.section__list-item {
+    list-style: none;
+}
+
+.bkg {
+    background-image: url(assets/github.svg);
+    background-repeat: no-repeat;
+}
