--- a/style.css
+++ b/style.css
@@ -16,10 +16,17 @@ body {
 .container {
     max-width: 1440px;
     margin: 0 auto;
+    padding: 0 20px;
+}
+
+.main-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .header {
-    border: 1px red solid;
+    background-color: #94c8d6;
 }
 
 .nav-list {
@@ -38,22 +45,26 @@ body {
     border: 1px rebeccapurple solid;
 }
 
+.section {
+    width: calc(50% - 20px);
+}
+
 .section-profile {
     display: flex;
+    justify-content: space-around;
     align-items: center;
-    height: 190px;
+    padding: 50px 30px 30px 30px;
+    width: 100%;
+    border-bottom: 15px solid #e3c3d4;
 }
 
 .section-profile__box {
-    width: 50%;
     text-align: center;
 }
 
 .section-profile__img-me {
-    width: 125px;
-    height: 125px;
-    display: block;
-    margin: 0 auto;
+    width: 200px;
+    height: 200px;
 }
 
 .section-profile__title {
@@ -62,11 +73,13 @@ body {
     text-transform: uppercase;
 }
 
-.section-profile__text {
+.section-profile__subtitle {
     font-size: 18px;
     letter-spacing: 7px;
     text-transform: uppercase;
 }
+
+.section-profile__text {}
 
 .footer {
     border: 1px blanchedalmond solid;
